--- a/WebContent/listar/atividade.html
+++ b/WebContent/listar/atividade.html
@@ -38,14 +38,20 @@
 					</div>
 				</div>
 				<div class="form-group">
+					<label for="inputquantidadeDeAtividadesPorSemestre" class="col-sm-2 control-label">Quantidade de atividade</label>
+					<div class="col-sm-2">
+						<input type="number" name="quantidadeDeAtividadesPorSemestre" ng-model="atividade.quantidadeDeAtividadesPorSemestre" class="form-control" id="inputquantidadeDeAtividadesPorSemestre" placeholder="Quantidade de atividade" readonly>
+					</div>
 					<label for="inputPorcentagem" class="col-sm-1 control-label">Aproveitamento</label>
 					<div class="col-sm-2">
-						<input type="number" name="porcentagem" ng-model="atividade.porcentagem" class="form-control" id="inputPorcentagem" placeholder="Aproveitamento" readonly>
+						<input type="number" name="porcentagem" ng-model="atividade.porcentagem" min="1" max="100" class="form-control" id="inputPorcentagem" placeholder="Semestral" readonly>
 					</div>
-					<label for="inputporcentagemAproveitadaPorAtividade" class="col-sm-3 control-label">Aproveitamento por atividade</label>
+					<label for="inputporcentagemAproveitadaPorAtividade" class="col-sm-2 control-label">Aproveitamento</label>
 					<div class="col-sm-3">
-						<input type="number" name="porcentagemAproveitadaPorAtividade" ng-model="atividade.porcentagemAproveitadaPorAtividade" class="form-control" id="inputporcentagemAproveitadaPorAtividade" placeholder="Aproveitamento por atividade" readonly>
+						<input type="number" name="porcentagemAproveitadaPorAtividade" ng-model="atividade.porcentagemAproveitadaPorAtividade" min="1" max="100" class="form-control" id="inputporcentagemAproveitadaPorAtividade" placeholder="por atividade" readonly>
 					</div>
+				</div>
+				<div class="form-group">
 					<label for="inputEstado" class="col-sm-1 control-label">Estado</label>
 					<div class="col-sm-2">
 						<select class="form-control" name="ativo" ng-model="atividade.ativo" disabled>
@@ -53,8 +59,6 @@
 							<option value="INATIVO">INATIVO</option>
 						</select>
 					</div>
-				</div>
-				<div class="form-group">
 					<label for="inputEstado" class="col-sm-1 control-label">Modalidade</label>
 					<div class="col-sm-4">
 						<select class="form-control" ng-model="atividade.modalidade" ng-options="modalidade.nome for modalidade in modalidades track by modalidade.codigo" disabled>
